--- a/dev/style/components/_breadcrumb.scss
+++ b/dev/style/components/_breadcrumb.scss
@@ -36,13 +36,16 @@
   }
 
   &--active {
+    min-width: 0;
     overflow: hidden;
 
     span {
       color: var(--color-text);
       font-weight: 700;
+      display: block;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
